php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44712 stream_context_set_params segfaults on invalid arguments
Submitted: 2008-04-13 22:31 UTC Modified: 2008-04-13 22:42 UTC
From: bjori@php.net Assigned: bjori (profile)
Status: Closed Package: Streams related
PHP Version: 5.2.5 OS: Linux
Private report: No CVE-ID: None
 [2008-04-13 22:31 UTC] bjori@php.net
Description:
------------
stream_context_set_params segfaults on invalid arguments

Reproduce code:
---------------
<?php
$ctx = stream_context_get_default();
stream_context_set_params($ctx, array("options" => 1));
?>



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-04-13 22:42 UTC] bjori@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC