MFH: Fixed bug #44712 (stream_context_set_params segfaults on invalid arguments).